--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="CSS/profile.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <!--navigation bar-->
