added gallery etc

--- a/index.html
+++ b/index.html
@@ -5,34 +5,49 @@
     <link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="CSS/profile.css">
+    <link rel="stylesheet" href="CSS/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <!--navigation bar-->
-		<nav class= "navbar navbar-dark bg=primary"> 
-			<div class= "container">
-				<a class="navbar-brand" href="index.html">Marlena's art page</a>
-				<ul class="nav navbar-nav pull-right">
-					<li class="nav-item active">
-						<a class="nav-link" href="profile.html">Home</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="contact.html">Contact</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
+    <nav class= "navbar navbar-dark bg=primary"> 
+      <div class= "container">
+        <a class="navbar-brand" href="index.html">Marlena's art page</a>
+        <ul class="nav navbar-nav pull-right">
+          <li class="nav-item active">
+            <a class="nav-link" href="profile.html">Home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="gallery.html">Gallery</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="wordpress.html">Blog</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 <!--nav bar end-->
 	<div class="jumbotron text-center">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 col-md-offset-2">
-          	<h class="large-display">Hello</h>
+          <div class="col-md-12">
+            <h1 class="large-display animated zoomIn hidden-xs">
+              Welcome
+            </h1>           
+            <h1 class="small-display animated zoomIn visible-xs">
+              Welcome
+            </h1>
+            <h6 class="sub-text">
+              You're about to enter my world of art...
+            </h6>
           	<p class="lead">
-          		<br><br><br>
-              <a class="btn btn-primary btn-lg" href="contact.html">Contact</a>
+              <a class="btn btn-primary btn-lg btn-color" href="profile.html">
+                Enter
+              </a>
             </p>
-            	<br><br><br>
           </div>
       	</div>
   	</div>
