--- a/profile.html
+++ b/profile.html
@@ -1,10 +1,11 @@
-<html class="html">
+<html>
 <head>
 	<title>Marlena</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="CSS/profile.css">
+    <link rel="stylesheet" href="CSS/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <!--navigation bar-->
@@ -14,6 +15,13 @@
 				<ul class="nav navbar-nav pull-right">
 					<li class="nav-item active">
 						<a class="nav-link" href="profile.html">Home</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="gallery.html">Gallery</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="blog.html">Blog
+						</a>
 					</li>
 					<li class="nav-item active">
 						<a class="nav-link" href="contact.html">Contact</a>
