got rid of contact details

--- a/contact.html
+++ b/contact.html
@@ -116,8 +116,8 @@
 						<div class="card-block">
 								<h2 class="card-title">Contact Details</h3>
 							<br>
-								<h5 class="card-text">email</h5><p>marlena.dachnowicz@gmail.com</p>
-								<h5 class="card-text">mobile</h5><p>077770727574</p>
+								<h5 class="card-text">email</h5><p>xxx@xxx.com</p>
+								<h5 class="card-text">mobile</h5><p>077777777777</p>
 						</div>
 					</div>
 				</div>
