--- a/gallery.html
+++ b/gallery.html
@@ -117,11 +117,11 @@
 			<div class="col-xs-12 col-md-7"> <!--right column opening-->
 				<div class="centering">
 				<img width="80%" src="img/yosemite.jpg">
-				<img width="80%" src="img/mistyeyes.jpg">
-				<img width="100%" src="img/destiny.jpg">
-				<img width="80%" src="img/sweetdreams.jpg">
-				<img width="100%" src="img/drumlane.jpg">
-				<img width="100%" src="img/afghanistan.jpg">
+				<img width="80%" src="img/mistyeyes.JPG">
+				<img width="100%" src="img/destiny.JPG">
+				<img width="80%" src="img/sweetdreams.JPG">
+				<img width="100%" src="img/drumlane.JPG">
+				<img width="100%" src="img/afghanistan.JPG">
 				</div>
 			</div>
 		</div>
